fix: added horizontal scrolling in the table when the content does not fit

--- a/client/src/components/Table/style/Table.module.css
+++ b/client/src/components/Table/style/Table.module.css
@@ -1,8 +1,9 @@
 .auctionRoom {
   font-family: Arial, sans-serif;
-  max-width: 100%;
+  min-width: 100%;
   width: 100%;
   margin: 0 auto;
+  overflow-x: auto;
 }
 
 h2 {
@@ -22,11 +23,6 @@ table {
   max-width: 100%;
   width: 100%;
   border-collapse: collapse;
-
-}
-
-th {
-  border: 1px solid #ddd;
 }
 
 th,
@@ -36,6 +32,7 @@ td {
 }
 
 th {
+  min-width: 300px;
   background-color: #fff;
   border: none;
   border-bottom: 1px solid #bbb;
